--- a/Dx12_Test/Dx12_Test/Dx12_Test.vcxproj
+++ b/Dx12_Test/Dx12_Test/Dx12_Test.vcxproj
@@ -106,7 +106,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d12.lib;dxgi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d12.lib;dxgi.lib;d3dcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -142,11 +142,12 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d12.lib;dxgi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d12.lib;dxgi.lib;d3dcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Src\D3D12\D3D12ConstantBuffer.h" />
+    <ClInclude Include="Src\D3D12\D3D12DescriptorHeap.h" />
     <ClInclude Include="Src\D3D12\D3D12Device.h" />
     <ClInclude Include="Src\D3D12\D3D12IndexBuffer.h" />
     <ClInclude Include="Src\D3D12\D3D12Shader.h" />
@@ -161,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\D3D12\D3D12ConstantBuffer.cpp" />
+    <ClCompile Include="Src\D3D12\D3D12DescriptorHeap.cpp" />
     <ClCompile Include="Src\D3D12\D3D12Device.cpp" />
     <ClCompile Include="Src\D3D12\D3D12IndexBuffer.cpp" />
     <ClCompile Include="Src\D3D12\D3D12Shader.cpp" />
