--- a/Dx12_Test/Dx12_Test/Dx12_Test.vcxproj
+++ b/Dx12_Test/Dx12_Test/Dx12_Test.vcxproj
@@ -107,6 +107,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>d3d12.lib;dxgi.lib;d3dcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)../mw/Jansson/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -143,6 +144,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>d3d12.lib;dxgi.lib;d3dcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)../mw/Jansson/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -150,6 +152,7 @@
     <ClInclude Include="Src\D3D12\D3D12DescriptorHeap.h" />
     <ClInclude Include="Src\D3D12\D3D12Device.h" />
     <ClInclude Include="Src\D3D12\D3D12IndexBuffer.h" />
+    <ClInclude Include="Src\D3D12\D3D12RootSignature.h" />
     <ClInclude Include="Src\D3D12\D3D12Shader.h" />
     <ClInclude Include="Src\D3D12\D3D12Texture.h" />
     <ClInclude Include="Src\D3D12\D3D12VertexBuffer.h" />
@@ -165,6 +168,7 @@
     <ClCompile Include="Src\D3D12\D3D12DescriptorHeap.cpp" />
     <ClCompile Include="Src\D3D12\D3D12Device.cpp" />
     <ClCompile Include="Src\D3D12\D3D12IndexBuffer.cpp" />
+    <ClCompile Include="Src\D3D12\D3D12RootSignature.cpp" />
     <ClCompile Include="Src\D3D12\D3D12Shader.cpp" />
     <ClCompile Include="Src\D3D12\D3D12Texture.cpp" />
     <ClCompile Include="Src\D3D12\D3D12VertexBuffer.cpp" />
